--- a/style.css
+++ b/style.css
@@ -5,31 +5,34 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background-color:#0D1321;
-    color:#F4F4F9;
+    background: linear-gradient(to bottom,#E5E7E6,#bbbcbc);
+    color:#0D1B2A;
+
 }
 
 a{
-    color:#73e4df;
+    color:#E5E7E6;
     text-decoration: none;
     transition: 0.4s;
 }
 
 a:hover {
-    color:#89fb59 ;
+    color:#BE90A4 ;
 
 }
 
 nav {
-    background-color:#0C1B33 ;
+    background-color:#973961;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 30px;
     align-items: center;
     height: 10vh;
 }
 
 .logo{
     text-transform: uppercase;
+    border-radius: 50%;
 }
 
 ul{
@@ -42,4 +45,75 @@ ul{
 p {
     letter-spacing: 2px;
     font-size: 20px;
+}
+
+img {
+    height: 60px;
+    transition: 0.3s
+}
+
+.arear img:hover{
+    transform: scale(1.05);
+    transform: translateY(-10px);
+}
+
+.arear{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.desenho {
+    display: flex;
+    align-items: center;
+}
+
+.txt {
+    width: 0px;
+    overflow: hidden;
+    transition: 0.4s;
+    color: #ffffff
+    
+}
+
+.desenho:hover .txt{
+    width: 70px
+}
+
+.pimagem{
+    width: 100%;
+    height: 700px;
+}
+
+.pr{
+    color: #a91b0c;
+}
+
+.reserva{
+    padding: 0px;
+    margin: 0px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #973961
+}
+
+main {
+    text-align: center;
+}
+
+.pratos img:hover{
+    transform: scale(1.05);
+}
+
+.pratos{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+
+}
+
+.comida{
+    padding: 0px;
+    margin: 0px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #973961
 }
